--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,3 @@
-
 /* FORMATAÇÕES PADRÃO */
 * {
     margin: 0;
@@ -11,18 +10,10 @@
 }
 
 body {
-    background-color: #fff;
+    background-color: #121212;
     overflow-x: hidden;
     height: 100%;
 }
-
-nav {    
-    background-image: url(../img/bg-1.jpg);
-    background-repeat: no-repeat;
-    height: 400px;
-    width: calc(100% -150px);
-}
-
 
 
 /* FORMATAÇÃO DO CABEÇALHO */
@@ -38,9 +29,9 @@ nav {
 }
 
 #menu-topo {
-    margin-top: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     margin-inline: auto;
-    background: rgba(138, 77, 177, .6);
     width: 580px;
 }
 
@@ -50,16 +41,18 @@ nav {
 
 .menu-linha a { 
     font-family: karla;
-    font-weight: bold;
     margin-inline: 25px;   
     text-decoration: none;
+    font-weight: lighter;
     font-size: 30px;
-    color: #FFF;
+    background: rgb(68,53,233);
+    background: linear-gradient(90deg, rgba(68,53,233,1) 0%, rgba(163,136,255,1) 43%, rgba(0,212,255,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .menu-linha a:hover { 
-    transition: 0.5s;
-    color: rgb(247, 239, 128);
+    
 }
 
 ul {
@@ -74,19 +67,45 @@ div {
 
 /* FORMATAÇÃO DO CONTAINER SOBRE */
 
-#sobre {    
-    background-color: #A388FF;
-    width: 960px;
-    margin-top: -25px;
+.text-gradient {
+    
+}
+
+#sobre {
+    width: 1200px;
     margin-inline: auto;
+    margin-top: 100px;
     text-align: justify;
     padding: 15px;
     display: grid;    
     grid-template-rows: 45px 1fr;
-    box-shadow: 5px 5px 5px rgb(184, 183, 183);
-    border-radius: 5px;
     box-sizing: border-box;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+    border-radius: 20px;
+    position: relative;
+    z-index: 1;
+    background: inherit;
+    overflow: hidden;
 }
+
+#sobre:before {
+    content: "";
+    position: absolute;
+    background: inherit;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+    filter: blur(10px);
+    margin: -20px;
+  }
+
+  #sobre:hover {
+      box-shadow: inset 0 0 2000px rgba(255, 255, 255, .9);
+      box-shadow: 0 0 2rem 0 rgba(0, 0, 0, .9); 
+  }
 
 .sobre-coluna {
     display: grid;
@@ -96,8 +115,7 @@ div {
 
 h1 {
     font-family: karla;
-    font-weight: bold;
-    color: white;
+    color: #FFF;
 }
 
 #texto-sobre p {
@@ -123,12 +141,12 @@ h3 {
 h3 ~ p {
     margin-top: 5px;
     font-family: karla;
-    color: rgb(255, 238, 0);
+    color: #93E0F6;
 }
 
 #imagem-sobre {
-    margin-left: 50px;
-    margin-top: -50px;
+    margin-left: 120px;
+    margin-top: -120px;
 }
 
 #img-sobre-w {
@@ -293,10 +311,3 @@ footer {
   .menu-hide {
     display: none;    
  }
-
-
-
-
-
-
-  
