--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,10 +28,9 @@ body {
     left: 8%;
     top: 8%;
     background-color: #1C2833;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
 }
 
 .container-foto {
@@ -83,7 +82,7 @@ section {
 /* FORMATAÇÃO DO CONTAINER SOBRE */
 
 #sobre {
-    width: 900px;
+    width: 1000px;
     margin-top: 50px;
     text-align: justify;
     padding: 15px;
@@ -137,12 +136,12 @@ h3 ~ p {
 
 #porfolio { 
     box-sizing: border-box;
-    width: 900px;
+    width: 1000px;
     margin-top: 50px;
     text-align: justify;
     padding: 15px;
     display: grid;    
-    grid-template-rows: 45px 1fr;
+    grid-template-rows: 100px 1fr;
     box-sizing: border-box;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
     border-radius: 20px;
@@ -161,7 +160,7 @@ h3 ~ p {
 
 
 #texto-portfolio {
-    margin-top: 15px;
+    margin-top: 50px;
     font-family: inconsolata;
     color: white;
     font-size: 1.3rem;
@@ -177,7 +176,8 @@ h3 ~ p {
     background-size: 100%;
     background-repeat: no-repeat;
     border-radius: 20px;
-    height: 160px;
+    height: 180px;
+    width: 270px;
     cursor: pointer;
     text-align: center;
     margin-bottom: 25px;
@@ -185,7 +185,7 @@ h3 ~ p {
 }
 
 .card-portfolio:hover {  
-    background-position-y: -130px;
+    background-position-y: -1300px;
     cursor: pointer;
     transition: .5s;
 }
@@ -281,26 +281,15 @@ h3 ~ p {
       display: none;
   }
 
-  .menu-hide {
-    display: none;    
+  .menu-hide {    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
  }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ .d-none {     
+    display: none;
+ }
 
 ::-webkit-scrollbar{
     background-color: #93E0F6;
@@ -310,9 +299,7 @@ h3 ~ p {
 ::-webkit-scrollbar-thumb {
     background: #17202A;
     border: 1px solid #93E0F6;
-}
-
- 
+} 
 
  .lista-sociais {
     display: grid;
@@ -346,47 +333,47 @@ h3 ~ p {
  /* Tooltip container */
 .tooltip {
     position: relative;
-  }
+}
   
-  /* Tooltip text */
-  .tooltip .tooltiptext {
-    visibility: hidden;
-    font-family: inconsolata;
-    width: 120px;
-    color: #1C2833;
-    background: #93E0F6;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-    font-size: 20px;
-  
-    /* Position the tooltip text */
-    position: absolute;
-    z-index: 1;
-    bottom: 0;
-    right: 40px;
-    margin-left: -60px;
-  
-    /* Fade in tooltip */
-    opacity: 0;
-    transition: opacity 0.3s;
-  }
-  
-  /* Tooltip arrow */
-  .tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    transform: rotate(-90deg);
-    top: 35%;
-    left: 125px;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #93E0F6 transparent transparent transparent;
-  }
-  
-  /* Show the tooltip text when you mouse over the tooltip container */
-  .tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
-  }
+/* Tooltip text */
+.tooltip .tooltiptext {
+visibility: hidden;
+font-family: inconsolata;
+width: 120px;
+color: #1C2833;
+background: #93E0F6;
+text-align: center;
+padding: 5px 0;
+border-radius: 6px;
+font-size: 20px;
+
+/* Position the tooltip text */
+position: absolute;
+z-index: 1;
+bottom: 0;
+right: 40px;
+margin-left: -60px;
+
+/* Fade in tooltip */
+opacity: 0;
+transition: opacity 0.3s;
+}
+
+/* Tooltip arrow */
+.tooltip .tooltiptext::after {
+content: "";
+position: absolute;
+transform: rotate(-90deg);
+top: 35%;
+left: 125px;
+margin-left: -5px;
+border-width: 5px;
+border-style: solid;
+border-color: #93E0F6 transparent transparent transparent;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+visibility: visible;
+opacity: 1;
+}
